[FIX]Keyword-contaainer content overflow
[FIX]Keyword-contaainer content overflowing parent element
 - set overflow on scroll

--- a/style.css
+++ b/style.css
@@ -41,6 +41,7 @@ body {
   display: flex;
   align-items: center;
   gap: 1.2rem;
+  overflow-x: scroll;
 }
 .keyword-container .featured-tech {
   margin: 0;
